# ModS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/foo/: CMakeLists.txt  FooClass.cpp  FooClass.hpp  FooModule.cpp  FooModule.hpp  IFooClass.hpp
examples/main/: CMakeLists.txt  KernelService.hpp  main.cpp
include/ModS/: AbstractFactory.hpp  AbstractImplementationInfo.hpp  AbstractInjector.hpp  AbstractInterfaceInfo.hpp  AbstractModule.hpp  AbstractRoute.hpp  Factory.hpp  GraphViz.hpp  ImplementationInfo.hpp  Injector.hpp  InterfaceInfo.hpp  Module.hpp  Pointer.hpp  Route.hpp  Typename.hpp  reflection.hxx
src/: Injector.cpp
